test/src/e2e_vm_tests/test_programs/should_fail/associated_fn_as_method_call/src/main.sw
script;

struct Bar {}

impl Bar {
  fn associated() {}
}

fn main() -> u64 {
  let bar = Bar {};
  bar.associated();
  0
}
